<?xml version="1.0" encoding="UTF-8"?> 
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>com.comundus</groupId>
        <artifactId>comundus</artifactId>
        <version>8</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.comundus.maven</groupId>
    <artifactId>vfs-maven-plugin</artifactId>
    <packaging>maven-plugin</packaging>
    <version>15.0</version>
    <name>VFS Maven Plugin</name>
    <url>http://opencms-maven.comundus.com</url>
    <description>Maven plugin for synchronizing OpenCms VFS data with project sources.</description>
    <inceptionYear>2006</inceptionYear>

    <ciManagement>
        <system>Jenkins</system>
        <url>http://jenkins/job/Maven_VFS_Plugin/</url>
    </ciManagement>
    <developers>
        <developer>
            <id>ar</id>
            <name>Adrian Rodriguez</name>
            <email>a.rodriguez@comundus.com</email>
            <url/>
            <organization>comundus GmbH</organization>
            <organizationUrl>http://www.comundus.com</organizationUrl>
            <roles>
                <role>lead developer</role>
            </roles>
            <timezone>1</timezone>
            <properties/>
        </developer>
        <developer>
            <id>dp</id>
            <name>Detlef Pleiß</name>
            <email>d.pleiss@comundus.com</email>
            <url/>
            <organization>comundus GmbH</organization>
            <organizationUrl>http://www.comundus.com</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>1</timezone>
            <properties/>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:comundus/vfs-maven-plugin.git</connection>
        <developerConnection>scm:git:git@github.com:comundus/vfs-maven-plugin.git</developerConnection>
        <url>http://github.com/comundus/vfs-maven-plugin</url>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <opencms.version>15.0</opencms.version>
        <java.version>11</java.version>
        <sonar.host.url>https://devop.comundus.com/sonarqube</sonar.host.url>
        <sonar.projectVersion>${project.version}-b${BUILD_NUMBER}</sonar.projectVersion>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
      		</plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>3.6.4</version>
                </plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-plugin-plugin</artifactId>
                                        <versionRange>[3.2,)</versionRange>
                                        <goals>
                                            <goal>descriptor</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>3.9.1.2184</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-artifact</artifactId>
            <version>3.8.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-compat</artifactId>
            <version>3.8.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>3.8.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>2.3.1</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.opencms</groupId>
            <artifactId>opencms-core</artifactId>
            <version>${opencms.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-fileupload</groupId>
                    <artifactId>commons-fileupload</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
                <exclusion>
                      <groupId>org.apache.logging.log4j</groupId>
                      <artifactId>log4j-api</artifactId>
                </exclusion>
                <exclusion>
                      <groupId>org.apache.logging.log4j</groupId>
                      <artifactId>log4j-core</artifactId>
                </exclusion>
                <exclusion>
                      <groupId>org.apache.logging.log4j</groupId>
                      <artifactId>log4j-slf4j-impl</artifactId>
                </exclusion>
                <exclusion>
                      <groupId>org.apache.logging.log4j</groupId>
                      <artifactId>log4j-jcl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                	<groupId>xml-apis</groupId>
                	<artifactId>xml-apis</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jcl</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>org.opencms</groupId>
            <artifactId>opencms-modules</artifactId>
            <version>${opencms.version}</version>
        </dependency>
        <dependency>
            <groupId>org.opencms</groupId>
            <artifactId>opencms-resources</artifactId>
            <version>${opencms.version}</version>
        </dependency>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.3</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.15</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-digester3</artifactId>
            <version>3.2</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.safehaus.jug</groupId>
            <artifactId>jug</artifactId>
            <version>2.0.0</version>
            <classifier>lgpl</classifier>
        </dependency>
        <dependency>
            <groupId>cryptix</groupId>
            <artifactId>cryptix</artifactId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.alfresco</groupId>
            <artifactId>jlan</artifactId>
            <version>r55007</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
            </plugin>
        </plugins>
    </reporting>
</project>
